--- a/public/index.html
+++ b/public/index.html
@@ -1,55 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="theme-color" content="#317EFB" />
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="/style.css" />
-    <title>Budget Tracker</title>
-  </head>
-  <body>
-    <div class="wrapper">
-      <div class="total">
-        <div>Your total is: $<span id="total">0</span></div>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Fitness Tracker</title>
+</head>
 
-      <form>
-        <label for="t-name">Transaction Name:</label>
-        <input type="text" id="t-name" placeholder="Name" />
-
-        <label for="t-amount">Transaction Amount:</label>
-        <input type="number" min="0" id="t-amount" placeholder="Amount" />
-
-        <div class="transaction-buttons">
-          <button id="add-btn"><i class="fa fa-plus"></i> Add Funds</button>
-          <button id="sub-btn">
-            <i class="fa fa-minus"></i> Subtract Funds
-          </button>
+<body>
+  <nav>
+    <a href="/">Fitness Tracker</a>
+    <a href="/stats">Dashboard</a>
+  </nav>
+  <div class="wrapper workout">
+    <header>
+      <h1>Fitness Tracker</h1>
+    </header>
+    <div class="ui container workout">
+      <div class="ui raised card m-auto">
+        <div class="prev-workout">
+          <h3>Last Workout</h3>
+          <div>
+            <div class="workout-stats"></div>
+            <div class="buttons">
+              <a id="continue-btn" href="/exercise?" class="huge ui blue button">Continue Workout</a>
+              <a href="/exercise" class="huge positive ui button">New Workout</a>
+            </div>
+          </div>
         </div>
-        <p role="alert" class="error"></p>
-      </form>
-
-      <div class="transactions">
-        <table>
-          <thead>
-            <th>Transaction</th>
-            <th>Amount</th>
-          </thead>
-          <tbody id="tbody"></tbody>
-        </table>
+        <div class="new-workout">
+          <h3>Create Your First Workout</h3>
+        </div>
       </div>
-
-      <canvas id="my-chart"></canvas>
     </div>
+  </div>
+  </div>
+  <div id="toast">
+    Workout Added Successfully!
+  </div>
+  <script src="/api.js"></script>
+  <script src="/workout.js"></script>
+  <script src="/index.js"></script>
+</body>
 
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
-    <script src="/db.js"></script>
-    <script src="/index.js"></script>
-  </body>
 </html>
